# 0811-test-codex

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README  README.md  README.txt  config.conf  main.py  pyproject.toml
.github/workflows/: ci.yml  nightly-audit.yml
assets/: mapping.json
scripts/: example_config.conf  generate_sample_xlsx.py
src/excel_transformer/: __init__.py  cli.py  config.py  transform.py
src/wf_batch_runner/: cli.py
tests/data/: sample.csv  sample.xlsx
tests/excel_transformer/: test_cli_output_dir.py  test_cli_row_multi.py  test_grouped_mode.py  test_transform_readme_scenarios.py
