[project]
name = "coding-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "diff-cover>=8.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "build>=1.2.0",
    "pre-commit>=3.5",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.(py|pyi)$"
exclude = [
  "^\.venv/",
  "^build/",
  "^dist/",
  "^\.git/",
  "^__pycache__/",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
]
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["excel_transformer*"]
